outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-23_15-16-28/evaluations/problem_eval6929532884952001995_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance, where weights for distance to current and destination nodes are dynamically adjusted using a sigmoid function of the remaining nodes, while incorporating a novelty measure that rewards nodes with high average distance to all other nodes, creating a balance between proximity and exploration.}
                                                                                                                                                                                                                                                                                                                   ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance, where weights for distance to current and destination nodes are dynamically adjusted using a sigmoid function of the remaining nodes, while incorporating a novelty measure that rewards nodes with high average distance to all other nodes, creating a balance between proximity and exploration.}
                                                                                                                                                                                                                                                                                                                   ^
SyntaxError: unmatched '}'
